--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,9 @@
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
+*.env
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
